# vdi-fuse

./: CMakeLists.txt  main.c
include/: ext2.h  ext2_structs.h  utils.h  vdi.h  vdi_structs.h  vdif_structs.h
include/DataStructures/: dictionary.h  linked_list.h
src/: ext2.c  utils.c  vdi.c
src/DataStructures/: dictionary.c  linked_list.c
